--- a/website/index.html
+++ b/website/index.html
@@ -13,9 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">NeuroSTR</h1>
       <h2 class="project-tagline">A C++ Neuroanatomy Library</h2>
-      <a href="https://github.com/lrodriguezlujan/neurostr" class="btn">View on GitHub</a>
+      <a href="https://github.com/ComputationalIntelligenceGroup/neurostr" class="btn">View on GitHub</a>
       <a href="doc/arch.html" class="btn">Documentation</a>
-      <a href="https://github.com/lrodriguezlujan/neurostr/archive/master.zip" class="btn">Download source code</a>
+      <a href="https://github.com/ComputationalIntelligenceGroup/neurostr/archive/master.zip" class="btn">Download source code</a>
     </section>
 
     <section class="main-content">
@@ -76,7 +76,7 @@
 
       <h2>
       <a id="offer_3" class="anchor" href="#intro_performance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compatible with neuroviewer</h2>
-      Visualize your reconstructions in 3D with <a href="https://github.com/lrodriguezlujan/neurostr"> NeuroViewer </a>, a typescript library to render 3D reconstructions.
+      Visualize your reconstructions in 3D with <a href="https://github.com/lrodriguezlujan/neuroviewer"> NeuroViewer </a>, a typescript library to render 3D reconstructions.
 
       <p style="text-align:center">
         <a href="https://lrodriguezlujan.github.io/neuroviewer/" target="_blank">
@@ -86,18 +86,18 @@
 
       <h1><a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a> Start Using NeuroSTR!</h1>
 
-      Clone our <a href="https://github.com/lrodriguezlujan/neurostr"> repository </a> and follow the <a href="https://lrodriguezlujan.github.io/neurostr/doc/install.html"> install instructions! </a>
+      Clone our <a href="https://github.com/ComputationalIntelligenceGroup/neurostr"> repository </a> and follow the <a href="https://ComputationalIntelligenceGroup.github.io/neurostr/doc/install.html"> install instructions! </a>
 
       <h1>
       <a id="Contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact us!</h1>
       <ul class="task-list">
-        <!--<li><a href="https://github.com/bmihaljevic">Bojan Mihaljevic</a> (The guy)</li>-->
+        <li><a href="https://github.com/bmihaljevic">Bojan Mihaljevic</a> (Maintainer)</li>
         <li><a href="https://github.com/lrodriguezlujan">Luis Rodriguez-Lujan</a> (Original author)</li>
       </ul>
 
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/lrodriguezlujan/neurostr">NeuroSTR</a> war originaly created by <a href="https://github.com/lrodriguezlujan">Luis Rodriguez-Lujan</a> <!-- and is currently maintained by <a href="https://github.com/bmihaljevic">Bojan Mihaljevic</a> --> </span>
+        <span class="site-footer-owner"><a href="https://github.com/lrodriguezlujan/neurostr">NeuroSTR</a> war originaly created by <a href="https://github.com/lrodriguezlujan">Luis Rodriguez-Lujan</a> and is currently maintained by <a href="https://github.com/bmihaljevic">Bojan Mihaljevic</a> </span>
         <span class="site-footer-credits">This page uses the <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a href="https://twitter.com/jasonlong">Jason Long</a>.</span> <br/>
         <span class="site-footer-credits">Documentation pages have been generated with <a href="http://couscous.io/">Couscous</a>.</span>
       </footer>
