--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,7 @@
       <h2 class="project-tagline">A C++ Neuroanatomy Library</h2>
       <a href="https://github.com/ComputationalIntelligenceGroup/neurostr" class="btn">View on GitHub</a>
       <a href="doc/arch.html" class="btn">Documentation</a>
+      <a href="bins/bins.html" class="btn">Download binaries or installation script</a>
       <a href="https://github.com/ComputationalIntelligenceGroup/neurostr/archive/master.zip" class="btn">Download source code</a>
     </section>
 
