Included home href when clicking documentation header

--- a/bins/bins.html
+++ b/bins/bins.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">NeuroSTR</h1>
+      <h1 href="/neurostr/" class="project-name">NeuroSTR</h1>
       <h2 class="project-tagline">A C++ Neuroanatomy Library</h2>
       <a href="https://github.com/ComputationalIntelligenceGroup/neurostr" class="btn">View on GitHub</a>
       <a href="/neurostr/doc/arch.html" class="btn">Documentation</a>
-      <a href="/neurostr/doc/arch.html" class="btn">Download binaries or installation script</a>
+      <a href="/neurostr/bins/bins.html" class="btn">Download binaries or installation script</a>
       <a href="https://github.com/ComputationalIntelligenceGroup/neurostr/archive/master.zip" class="btn">Download source code</a>
     </section>
 
