--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a href="/neurostr/index.html" style="text-decoration:none; color : #fff;">NeuroSTR </a></h1>
+      <h1 class="project-name">NeuroSTR</h1>
       <h2 class="project-tagline">A C++ Neuroanatomy Library</h2>
       <a href="https://github.com/ComputationalIntelligenceGroup/neurostr" class="btn">View on GitHub</a>
       <a href="doc/arch.html" class="btn">Documentation</a>
