Changed label for downloading install script

--- a/bins/bins.html
+++ b/bins/bins.html
@@ -53,7 +53,7 @@
         </table>
 
         <br>
-        <a href="https://raw.githubusercontent.com/ComputationalIntelligenceGroup/neurostr/master/binaries/install_neurostr.sh">Installation script </a>(from Ubuntu to Ubuntu/Windows) (Right click->save as...)</td>
+        <label>Use this <a href="https://raw.githubusercontent.com/ComputationalIntelligenceGroup/neurostr/master/binaries/install_neurostr.sh">script</a> if you want to compile from source. Works on Ubuntu and compiles for Ubuntu or Windows. (Right click->save as...)</label>
         <br>
         <label>(chmod +x ./install_neurostr.sh before executing)</label>
       </div>
